change menu color

--- a/WebRoot/help.html
+++ b/WebRoot/help.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>帮助信息</title>
 
 <style>
@@ -49,15 +49,15 @@ html,body {
 <div>
 	<div style="padding:30px;">
   		<h2>简介</h2>
-  		<p style="text-align: justify;">怡德数字社区是深证启云科技有限公司自主研发的数字社区产品。</p>
-		<p style="text-align: justify;">平台管理了社区人员信息，3d展现了社区环境</p>　　
-		<p style="text-align: justify;">另外，提供小区人员查询，导出等功能，还可灵活扩展其功能</p> 　
+  		<p style="text-align: justify;">怡德数字社区是深圳启云高创数据科技有限公司自主研发的数字社区产品。</p>
+		<p style="text-align: justify;">平台管理了社区人员信息，3d展现了社区环境。</p>
+		<p style="text-align: justify;">另外，提供小区人员查询，导出等功能，还可灵活扩展其它功能。</p> 　
 
   		<h2>联系我们</h2>
     	<p style="margin-left:20px"> * 如果您在使用过程中遇到问题,或者有更好的建议<br>
       	* 欢迎您访问<br>
-      	* WEBSITE: <a href="http://www.qy.com" target="_blank">www.qy.com</a><br>
-      	* MAIL: support@qy.com<br>
+      	* 网址: <a href="http://www.qy.com" target="_blank">http://www.qy.com</a><br>
+      	* 邮件: support@qy.com<br>
       	</p>
   	</div>
 </div> 
