--- a/WebRoot/webclient.html
+++ b/WebRoot/webclient.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE HTML>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Web Client</title>
 
 <style>
