--- a/WebRoot/webclient.html
+++ b/WebRoot/webclient.html
@@ -6,12 +6,12 @@
 <style>
 html,body {
     height:100%;
-    margin:0;
-    padding:0
+    margin:0px;
+    padding:0px;
 }
 
 #dHead {
-    height:100px;
+    height:110px;
 /*     line-height:100px; */
     background:#690;
     width:100%;
@@ -19,7 +19,7 @@ html,body {
 /*     z-index:5; */
     top:0;
     box-sizing:border-box;
-    padding:15px 35px 10px 15px;
+    padding:15px;
 /*     text-align:center; */
 }
 #dBody {
@@ -33,8 +33,8 @@ html,body {
 /*     z-index:10; */
     position:absolute;
     clear:none;
-    top:100px;
-    bottom:100px;
+    top:110px;
+    bottom:0px;
 }
 .mycontent {
     padding:20px;
@@ -80,8 +80,6 @@ html,body {
   	padding:0px;
   	margin:0px;
   	border:0px;
-/* 	margin:0 100px;  */
-/* 	margin:0 8px; */
 }
 
 #btnSearch:hover {
@@ -90,6 +88,9 @@ html,body {
 
 .logo-android {
 	display: inline-block;
+	width:100px;
+	height:100px;
+	float:left;
 }
 
 </style>
@@ -113,7 +114,6 @@ html,body {
 // need to modify this path !!!
 //var FLY_FILE= "e:\\skyline\\怡德小区项目\\模型\\Skyline-TDJ0810\\Default.fly";
 var FLY_FILE= "e:\\skyline\\怡德\\怡德1101\\Default1101.fly";
-
 
 var sgworld = null;
 var houseDb = []; // the associated xlsx data
@@ -154,7 +154,6 @@ function scanTree() {
 //             alert("Found Vermont with id=" + id);
 //         else
 //             alert("New England\\States\\Vermont does not exist in tree");
-
 
         // root is the first visible item in tree.
         var root = sgworld.ProjectTree.GetNextItem("", ITEM_CODE.ROOT);
@@ -251,7 +250,7 @@ function readXslx() {
 			processWb(wb);
 			//console.log("zc: " + zc);
 			
-			alert("houseDb : " + houseDb.length);
+			//alert("houseDb : " + houseDb.length);
 			for(i=0;i<houseDb.length;i++) {
 				//console.log(i + " " + JSON.stringify(houseDb[i]));
 			}
@@ -358,7 +357,6 @@ function gotoObject(idx) {
 	
 	//obj.Message.GetMessageObject().InnerText = "the text set in js....";
 
-	//debugger;
 	var msg = sgworld.Creator.CreatePopupMessage("msg", "", 10, 10, 450, 200, -1);
 	msg.InnerText = data.address + "\r\n" + antiNull(data.houseAddress) + "\r\n" + data.name 
 	    + " "  + antiNull(data.tel);
@@ -556,13 +554,18 @@ $(document).ready(function() {
 <!-- this not work ! 
 <object id="sgworld" classid="CLSID:3A4F9197-65A8-11D5-85C1-0001023952C1" style="visibility:hidden;height:0px;"></object> -->
 
-<div id="dHead">
-	<a class="logo-android" href="./">
-    	<img alt="company logo" src="images/logo-android-green_1x.png">
-  	</a>
+<div id="dHead" style="">
+	<div style="float:left;vertical-align:middle;">
+		<a style="display:inline-block;" href="#">
+	    	<img alt="company logo" style="width:90px;height:90px;vertical-align:middle;" src="images/house2.png"/>
+	  	</a>
+	  	<span style="color:black;font-size:40px;font-weight:bold;">
+	  		广州市白云区怡德小区三维数字社区
+	  	</span>
+  	</div>
 
-	<div style="float:right;">
-		<input id="eSearch" size="30"/>
+	<div style="float:right;padding-top:15px;" >
+		<input id="eSearch" size="30" style="line-height:26px;font-size:22px;vertical-align:middle;"/>
 		<img id="btnSearch" width="32px" height="32px" src="images/search.png"  style="vertical-align:middle;">
 	</div>
 </div>
@@ -572,7 +575,6 @@ $(document).ready(function() {
 		<div id="eResult" style="padding:5px;">
 			<h2>搜索结果</h2>
 		</div>
-		
 		<!-- 
 		<div style='border-bottom:1px solid #888;overflow:hidden;padding:8px;' onclick='gotoObject({idx});'>
 			<div style="font-size:16px;">address111...1111111111111111</div>
@@ -583,7 +585,6 @@ $(document).ready(function() {
 			<div style="font-size:12px;">名字 13925031491...</div> 
 	  	</div>
  		-->	  	
-	  			
 	</div>
 	<div id="splitter1" class="splitter">
     </div>
@@ -596,23 +597,26 @@ $(document).ready(function() {
 	</div>
 </div>
 
+<!-- 
 <div id="dFoot" style="padding:28px 36px;background:#b0bec5;color:#fff;display:block;box-sizing:border-box;">
 	<div style="display:inline-block;box-sizing:border-box;">
 		<p>
-	    	<a href="https://www.google.com/intl/en_us/policies/" target="_blank">
-	        	**某某某某某某某某公司
+	    	<a href="http://kgsxj.by.gov.cn/" target="_blank">
+	        	广州白云区科技工业商务和信息化局
 	        </a>
 		</p>
 	</div>
 	    
 	<ul style="float:right;margin:10px -10px;font-weight:300;font-size:16px;line-height:1.6;list-style:none;">
 		<li>
-	    	<a href="https://plus.google.com/+android/posts" target="_blank" title="Find Android on Google+" data-g-event="site-footer-social" data-g-action="clicked" data-g-label="g-plus">
-	        	其他链接...
+	    	<a href="#" target="_blank" title="">
+	        	深圳市启云高创数据科技有限公司
 	        </a>
+	       	<span style="color:black;font-size:12px;">技术支持</span>
 		</li>
 	</ul>
 </div>
+ -->
 
 </body>
 </html>
